--- a/kin-rsocket-cloud-function-starter/pom.xml
+++ b/kin-rsocket-cloud-function-starter/pom.xml
@@ -22,6 +22,11 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-function-webflux</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>org.kin</groupId>
+            <artifactId>kin-framework-spring</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
