--- a/kin-rsocket-service-spring-support-starter/pom.xml
+++ b/kin-rsocket-service-spring-support-starter/pom.xml
@@ -17,6 +17,11 @@
             <artifactId>kin-framework-java</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.kin</groupId>
+            <artifactId>kin-framework-spring</artifactId>
+        </dependency>
+
         <!-- spring -->
         <dependency>
             <groupId>org.springframework</groupId>
