--- a/kin-rsocket-service-starter/pom.xml
+++ b/kin-rsocket-service-starter/pom.xml
@@ -19,6 +19,11 @@
         </dependency>
 
         <dependency>
+            <groupId>org.kin</groupId>
+            <artifactId>kin-framework-spring</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-actuator</artifactId>
         </dependency>
