--- a/kin-rsocket-gateway-http-starter/pom.xml
+++ b/kin-rsocket-gateway-http-starter/pom.xml
@@ -21,7 +21,7 @@
         <!-- 默认jwt -->
         <dependency>
             <groupId>org.kin</groupId>
-            <artifactId>kin-rsocket-auth-jwt-starter</artifactId>
+            <artifactId>kin-rsocket-auth</artifactId>
             <version>${project.version}</version>
         </dependency>
 
