--- a/kin-rsocket-example/kin-rsocket-example-broker/src/main/resources/application.yml
+++ b/kin-rsocket-example/kin-rsocket-example-broker/src/main/resources/application.yml
@@ -28,6 +28,9 @@ management:
   metrics:
     enable:
       http: false
+    export:
+      prometheus:
+        enabled: true
   trace:
     http:
       enabled: false
