--- a/kin-rsocket-example/kin-rsocket-example-broker/src/main/resources/application-gossip1.yml
+++ b/kin-rsocket-example/kin-rsocket-example-broker/src/main/resources/application-gossip1.yml
@@ -25,6 +25,9 @@ management:
   metrics:
     enable:
       http: false
+    export:
+      prometheus:
+        enabled: true
   trace:
     http:
       enabled: false
