--- a/kin-rsocket-example/kin-rsocket-example-broker/src/main/resources/application.yml
+++ b/kin-rsocket-example/kin-rsocket-example-broker/src/main/resources/application.yml
@@ -1,12 +1,14 @@
 spring:
   application:
     name: rsocket-broker
-#  cloud:
-#    nacos:
-#      discovery:
-#        server-addr: 127.0.0.1:8848
-#        metadata:
-#          rsocketSchemaPorts: tcp:${kin.rsocket.broker.port}
+  #  cloud:
+  #    nacos:
+  #      discovery:
+  #        server-addr: 127.0.0.1:8848
+  #        metadata:
+  #          rsocketSchemaPorts: tcp:${kin.rsocket.broker.port}
+  netty:
+    leak-detection: paranoid
 server:
   port: 9998
 
